fix bugs(?????too much bugs

--- a/materialize/sass/components/_variables.scss
+++ b/materialize/sass/components/_variables.scss
@@ -279,7 +279,7 @@ $spinner-default-color: $secondary-color !default;
 // 17. Tabs
 // ==========================================================================
 
-$tabs-underline-color:#303f9f !default;
+$tabs-underline-color:#fff !default;
 $tabs-text-color: #fff !default;
 $tabs-bg-color: #000 !default;
 
